--- a/Style/style.css
+++ b/Style/style.css
@@ -1,22 +1,135 @@
+/*mobile first*/
+.text {
+  display: flex;
+  align-items: center; }
 
-@charset "UTF-8";
-/* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
-  /***Police, normes appliqués à tout le site***/ /***Blocs BEM réutilisables, header, main, sections, ...***/
-  header {
-    min-height: 113px;
-  }
-  header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 113px;
-  }
-  
-  /***Blocs BEM indépendants comme boutons, ...***/
-  .search {
-    display: flex;
-    justify-content: center;
-  }
-  /***Variables,fonctions, mixins ***/ /***Règles utilisées pour une seule page et nons réutilisées***/ /***Code thématique (Noël, été, ...)***/ /***Directory pour feuilles de style externe par Bootstrap ou Jquery par exemple***/
-}/*# sourceMappingURL=style.css.map */
+.header__title {
+  font-family: "Shrikhand"; }
+
+h1 {
+  font-weight: 400; }
+
+* {
+  box-sizing: border-box; }
+
+.search {
+  box-shadow: inset 0 10px 10px -10px grey;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border: 0px;
+  gap: 15px;
+  padding-left: 30px;
+  background-color: #EAEAEA;
+  width: 100%;
+  height: 50px; }
+
+i.fa-sharp {
+  display: flex;
+  align-self: center;
+  width: 12px;
+  height: 16px;
+  padding-left: 60px;
+  color: #353535; }
+
+.search__input {
+  border: 0px;
+  background-color: #EAEAEA;
+  font-size: medium;
+  font-weight: bold; }
+
+.presentation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-bottom: 2rem;
+  background-color: #F7F7F7; }
+
+.reserver {
+  display: flex;
+  font-weight: 700;
+  font-size: 24px;
+  padding-top: 2rem;
+  width: 70%;
+  justify-content: center; }
+
+.decouvrez {
+  width: 70%;
+  padding-bottom: 1rem; }
+
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto; }
+
+.fa-solid {
+  display: flex;
+  align-items: center; }
+
+.number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+  border-radius: 25px;
+  background-color: #9356DC;
+  color: white; }
+
+button {
+  background: linear-gradient(#FF79DA, #9356DC);
+  color: white;
+  border-radius: 500px;
+  width: 218px;
+  font-size: 16px;
+  height: 50px;
+  border: none;
+  box-shadow: 0px 5px 5px #c2c0c0; }
+
+.grey-btn {
+  display: flex;
+  flex-direction: row;
+  border-radius: 20px;
+  border: solid 1px;
+  background-color: #F7F7F7;
+  box-shadow: 0px 4px 15px 5px grey;
+  width: 322px;
+  height: 72px; }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  background: #f6f6f6;
+  box-sizing: border-box; }
+
+header {
+  min-height: 113px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 113px;
+  background-color: white; }
+
+.filtres {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+
+.choix {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%; }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  background: #f6f6f6;
+  box-sizing: border-box; }
+
+/*# sourceMappingURL=style.css.map */
