--- a/Style/sass/style.scss
+++ b/Style/sass/style.scss
@@ -3,11 +3,12 @@
 @import "./base/reset";
 @import "./components/badge";
 @import "./components/button";
+@import "./components/cards";
 @import "./layout/body";
 @import "./layout/footer";
 @import "./layout/header";
 @import "./layout/navbar";
 @import "./layout/sidebar";
-@import "./pages/landing-page";
+@import "./pages/accueil";
 @import "./themes/material";
 @import "./layout/body";
