--- a/Style/sass/base/_reset.scss
+++ b/Style/sass/base/_reset.scss
@@ -69,4 +69,9 @@
         flex-direction: column;
         justify-content: space-between;
         height: auto;
+        background-color: white;
     }
+
+    
+
+    
