--- a/Style/sass/components/_button.scss
+++ b/Style/sass/components/_button.scss
@@ -13,9 +13,18 @@ button {
     display: flex;
     flex-direction: row;
     border-radius: 20px;
-    border:solid 1px;
-    background-color: #F7F7F7;
-    box-shadow: 0px 4px 15px 5px grey;
-    width: 322px;
+    background-color: #f1f1f1;
+    box-shadow: 0px 4px 15px 5px rgb(212, 209, 209);
+    width: 100%;
     height: 72px;
+    padding-left: 40px;
+    gap: 2rem;
+    margin-left: 13px;
 }
+
+.text {
+    @include text-center;
+    font-weight: 600;
+    font-size: 15px;
+}
+
