--- a/Style/style.css
+++ b/Style/style.css
@@ -1,8 +1,4 @@
 /*mobile first*/
-.text {
-  display: flex;
-  align-items: center; }
-
 .header__title {
   font-family: "Shrikhand"; }
 
@@ -64,7 +60,8 @@ i.fa-sharp {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: auto; }
+  height: auto;
+  background-color: white; }
 
 .fa-solid {
   display: flex;
@@ -78,7 +75,8 @@ i.fa-sharp {
   height: 25px;
   border-radius: 25px;
   background-color: #9356DC;
-  color: white; }
+  color: white;
+  position: absolute; }
 
 button {
   background: linear-gradient(#FF79DA, #9356DC);
@@ -94,17 +92,41 @@ button {
   display: flex;
   flex-direction: row;
   border-radius: 20px;
-  border: solid 1px;
-  background-color: #F7F7F7;
-  box-shadow: 0px 4px 15px 5px grey;
-  width: 322px;
-  height: 72px; }
+  background-color: #f1f1f1;
+  box-shadow: 0px 4px 15px 5px #d4d1d1;
+  width: 100%;
+  height: 72px;
+  padding-left: 40px;
+  gap: 2rem;
+  margin-left: 13px; }
+
+.text {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 15px; }
+
+.card {
+  border-radius: 15px 15px 15px 15px;
+  box-shadow: 0px 4px 15px 5px #d4d1d1; }
+
+.card-img {
+  object-fit: cover;
+  overflow: hidden;
+  width: 100%;
+  height: 200px;
+  position: relative;
+  border-radius: 15px 15px 0px 0px; }
 
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   background: #f6f6f6;
   box-sizing: border-box; }
+
+footer {
+  color: white;
+  background-color: #353535; }
 
 header {
   min-height: 113px;
@@ -124,7 +146,11 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 100%; }
+  width: 100%;
+  padding: 20px; }
+
+.restaurants {
+  padding: 1rem; }
 
 body {
   font-family: 'Roboto', sans-serif;
