--- a/Style/sass/base/_reset.scss
+++ b/Style/sass/base/_reset.scss
@@ -70,6 +70,12 @@
         justify-content: space-between;
         height: auto;
         background-color: white;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .fonct-title {
+        padding-left: 1rem;
     }
 
     
