--- a/Style/sass/pages/_accueil.scss
+++ b/Style/sass/pages/_accueil.scss
@@ -1,4 +1,12 @@
 
 .restaurants {
+    display: flex;
+    flex-direction: column;
     padding: 1rem;
+}
+
+.restaurants-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
