--- a/Style/sass/style.scss
+++ b/Style/sass/style.scss
@@ -12,3 +12,7 @@
 @import "./pages/accueil";
 @import "./themes/material";
 @import "./layout/body";
+@import "./pages/menu_palette";
+@import "./pages/menu_note";
+@import "./pages/menu_française";
+@import "./pages/menu_delice"
