--- a/Style/sass/components/_cards.scss
+++ b/Style/sass/components/_cards.scss
@@ -1,8 +1,10 @@
 
 
 .card {
+    display: flex;
+    flex-direction: column;
     border-radius: 15px 15px 15px 15px;
-    box-shadow: 0px 4px 15px 5px rgb(212, 209, 209);
+    background-color: white;
 }
 
     .card-img {
@@ -15,4 +17,30 @@
     }
 
                 
-    
+.card-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+    padding-left: 1rem;
+}
+
+.card-txt {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.card-title {
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+.card-subtitle {
+    margin: 0px;
+    padding-bottom: 1rem;
+}
+
+.box-shadow {
+    box-shadow: 0px 4px 15px 5px rgb(212, 209, 209);
+}
