--- a/Style/style.css
+++ b/Style/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*mobile first*/
 .header__title {
   font-family: "Shrikhand"; }
@@ -61,11 +62,37 @@ i.fa-sharp {
   flex-direction: column;
   justify-content: space-between;
   height: auto;
-  background-color: white; }
+  background-color: white;
+  margin-top: 1rem;
+  margin-bottom: 1rem; }
+
+.fonct-title {
+  padding-left: 1rem; }
 
 .fa-solid {
   display: flex;
   align-items: center; }
+
+.icon-heart {
+  width: 100%; }
+
+.fa-heart {
+  display: flex;
+  color: black;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  padding-right: 3rem;
+  cursor: pointer; }
+
+.fa-heart:focus {
+  color: violet; }
+
+.custom-checkbox input[type="checkbox"]:checked ~ .checked {
+  display: inline-block; }
+
+.custom-checkbox input[type="checkbox"]:checked ~ .unchecked {
+  display: none; }
 
 .number {
   display: flex;
@@ -78,6 +105,17 @@ i.fa-sharp {
   color: white;
   position: absolute; }
 
+.nouveau {
+  position: absolute;
+  height: 2rem;
+  width: 5rem;
+  background-color: #99e2d0;
+  color: #1b6150;
+  display: grid;
+  place-items: center;
+  right: 1rem;
+  top: 1rem; }
+
 button {
   background: linear-gradient(#FF79DA, #9356DC);
   color: white;
@@ -86,7 +124,13 @@ button {
   font-size: 16px;
   height: 50px;
   border: none;
-  box-shadow: 0px 5px 5px #c2c0c0; }
+  box-shadow: 0px 5px 5px #c2c0c0;
+  cursor: pointer;
+  transition: background-color 1s ease; }
+
+button:hover {
+  transform: scale(1.02);
+  opacity: 0.8; }
 
 .grey-btn {
   display: flex;
@@ -104,11 +148,13 @@ button {
   display: flex;
   align-items: center;
   font-weight: 600;
-  font-size: 15px; }
+  font-size: 16px; }
 
 .card {
+  display: flex;
+  flex-direction: column;
   border-radius: 15px 15px 15px 15px;
-  box-shadow: 0px 4px 15px 5px #d4d1d1; }
+  background-color: white; }
 
 .card-img {
   object-fit: cover;
@@ -118,6 +164,30 @@ button {
   position: relative;
   border-radius: 15px 15px 0px 0px; }
 
+.card-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  padding-left: 1rem; }
+
+.card-txt {
+  display: flex;
+  flex-direction: column;
+  gap: 5px; }
+
+.card-title {
+  padding-bottom: 0;
+  margin-bottom: 0; }
+
+.card-subtitle {
+  margin: 0px;
+  padding-bottom: 1rem; }
+
+.box-shadow {
+  box-shadow: 0px 4px 15px 5px #d4d1d1; }
+
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
@@ -125,8 +195,22 @@ body {
   box-sizing: border-box; }
 
 footer {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1.5rem;
   color: white;
   background-color: #353535; }
+  footer li {
+    list-style: none; }
+
+.foot-title {
+  display: flex;
+  font-family: "Shrikhand";
+  font-weight: 400;
+  margin-bottom: 0; }
+
+ul {
+  padding: 0; }
 
 header {
   min-height: 113px;
@@ -150,12 +234,26 @@ header {
   padding: 20px; }
 
 .restaurants {
+  display: flex;
+  flex-direction: column;
   padding: 1rem; }
+
+.restaurants-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; }
 
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   background: #f6f6f6;
   box-sizing: border-box; }
+
+.photoentête {
+  height: 275px; }
+  .photoentête img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
