--- a/Style/sass/components/_button.scss
+++ b/Style/sass/components/_button.scss
@@ -35,3 +35,11 @@ button:hover {
     font-size: 16px;
 }
 
+.commander {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    margin-bottom: 1rem;
+}
+
