--- a/Style/sass/components/_cards.scss
+++ b/Style/sass/components/_cards.scss
@@ -1,10 +1,29 @@
 
+.ligne1desktop {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    gap: 1rem;
+}
+
+.ligne2desktop {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width:100%;
+    gap: 1rem;
+}
 
 .card {
     display: flex;
     flex-direction: column;
     border-radius: 15px 15px 15px 15px;
     background-color: white;
+    position: relative;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
 }
 
     .card-img {
@@ -21,7 +40,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100%;
     width: 100%;
     padding-left: 1rem;
 }
@@ -43,4 +61,18 @@
 
 .box-shadow {
     box-shadow: 0px 4px 15px 5px rgb(212, 209, 209);
+}
+
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    padding-bottom: 5rem;
+}
+
+.restaurants-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex-wrap: wrap;
 }
