--- a/Style/sass/layout/_header.scss
+++ b/Style/sass/layout/_header.scss
@@ -1,9 +1,11 @@
 header {
+    display: flex;
+    flex-direction: row;
+    position: relative;
     min-height: 113px;
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    height: 63px;
     align-items: center;
-    min-height: 113px;
+    justify-content: center;
     background-color: white;
   }
