--- a/Style/sass/pages/_menu_palette.scss
+++ b/Style/sass/pages/_menu_palette.scss
@@ -9,3 +9,53 @@
     }
 }
 
+.souligne {
+    display: flex;
+    border-bottom: 3px solid #99EDD0;
+    width: 40px;
+    padding-top: 0;
+    margin-top: 0;
+}
+
+.margin-bottom {
+    margin-bottom: 5px;
+}
+
+.margin-top {
+    margin-top: 3rem;
+}
+
+.font-weight400 {
+    font-weight: 400;
+}
+
+.font-weight100 {
+    font-weight: 100;
+}
+
+.border-radius {
+    border-radius: 0 0 25px 25px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.main-pal {
+    background-color: #F6F6F6;
+    position: absolute;
+    margin-top: -2rem;
+    border-radius: 25px 25px 0 0;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10rem;
+}
+
+.footer-pal {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    margin-top: 80rem;
+}
