--- a/Style/sass/components/_button.scss
+++ b/Style/sass/components/_button.scss
@@ -36,10 +36,10 @@ button:hover {
 }
 
 .commander {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
-    margin-bottom: 1rem;
+    padding-bottom: 2rem;
 }
 
