--- a/Style/sass/components/_cards.scss
+++ b/Style/sass/components/_cards.scss
@@ -41,22 +41,36 @@
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    height: 76px;
     padding-left: 1rem;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
 }
 
 .card-txt {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
     gap: 5px;
 }
 
 .card-title {
+    display: flex;
+    white-space: nowrap;
     padding-bottom: 0;
     margin-bottom: 0;
+    text-overflow: ellipsis;
+    
 }
+
 .card-subtitle {
+    display: flex;
+    white-space: nowrap;
     margin: 0px;
     padding-bottom: 1rem;
+    text-overflow: ellipsis;
 }
 
 .box-shadow {
@@ -67,12 +81,43 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    padding-bottom: 5rem;
+    padding-bottom: 2rem;
+    width: 100%;
 }
 
 .restaurants-cards {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 1rem;
     flex-wrap: wrap;
 }
+
+.tiroir {
+    width: 0;
+    height: 100%;
+    transition: height 0.5s ease; /* Transition de l'animation */
+}
+
+/* Animation de l'ouverture des tiroirs */
+@keyframes slideIn {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 100%;
+    }
+  }
+  
+  /* Ajouter des délais d'animation pour chaque tiroir */
+  .tiroir:nth-child(1) {
+    animation: slideIn 0.5s ease 0.2s forwards;
+  }
+  
+  .tiroir:nth-child(2) {
+    animation: slideIn 0.5s ease 0.4s forwards;
+  }
+  
+  .tiroir:nth-child(3) {
+    animation: slideIn 0.5s ease 0.6s forwards;
+  }
