--- a/Style/sass/layout/_body.scss
+++ b/Style/sass/layout/_body.scss
@@ -1,6 +1,14 @@
 body {
+    margin: 0 auto;
     font-family: 'Roboto', sans-serif;
-    margin: 0;
     background: #f6f6f6;
     box-sizing: border-box;
+    max-width: 1440px;
   }
+
+  .debackground {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    width: 100%;
+}
