--- a/Style/sass/layout/_footer.scss
+++ b/Style/sass/layout/_footer.scss
@@ -1,7 +1,8 @@
 footer {
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    padding-left: 1.5rem;
+    padding: 1.5rem;
     color: white;
     background-color: #353535;
         li {
