--- a/Style/sass/pages/_accueil.scss
+++ b/Style/sass/pages/_accueil.scss
@@ -4,6 +4,21 @@
 /*Version desktop*/
 @media (min-width: 1023.98px)
                 {
+
+    .fonctionnement {
+      margin: 0 auto;
+    }
+    
+    .debackground {
+      max-width: 1250px;
+    }
+
+    .restaurants {
+        max-width: 1250px;
+        margin: 0 auto;
+        padding-bottom: 2rem;
+    }
+
     .filtres {
       display: flex;
       flex-direction: row;
@@ -12,22 +27,46 @@
     .restaurants-cards {
       display: flex;
       flex-direction: row;
+      gap: 3rem;
     }
 
         .ligne1desktop {
             flex-direction: row;
             width: 100%;
             height: 100%;
+            gap: 5rem;
         }
         
         .ligne2desktop {
             flex-direction: row;
             width: 100%;
             height: 100%;
+            gap: 5rem;
         }
-
+        
+        .card {
+          max-width: 634px;
+        }
+        
         footer {
             flex-direction: row-reverse;
             justify-content: end;
+            padding-bottom: 10px;
+            padding-right: 3rem;
+        }
+
+        .foot-title {
+            display: flex;
+            align-items: center;
+            font-size: 20px;
+        }
+
+        ul {
+            display: flex;
+            flex-direction: row;
+            margin-right: 4rem;
+            margin-top: 40px;
+            gap: 2rem;
+            padding-bottom: 0;
         }
 }
