--- a/Style/sass/components/_badge.scss
+++ b/Style/sass/components/_badge.scss
@@ -10,16 +10,33 @@
 .custom-checkbox input[type="checkbox"],
             .custom-checkbox .checked {
             display: none;
+            width: 20px;
+            height: 20px;
         }
  
         .custom-checkbox input[type="checkbox"]:checked ~ .checked
         {
             display: inline-block;
+            width: 20px;
+            height: 20px;
         }
  
         .custom-checkbox input[type="checkbox"]:checked ~ .unchecked
         {
             display: none;
+            width: 20px;
+            height: 20px;
+        }
+
+        .custom-checkbox {
+            width: 20px;
+            height: 20px;
+            padding-right: 3rem;
+        }
+
+        @keyframes fillFromRight {
+            0% { width: 0; }
+            100% { width: 100%; }
         }
 
 .icon-heart {
@@ -32,14 +49,14 @@
 }
 
     .far {
-    position: relative;
-    right: 3rem;
+    /*position: relative;*/
+    padding-right: 64px;
     display: flex;
     color: black;
     justify-content: space-between;
     align-items: center;
     font-size: 20px;
-    padding-top: 40px;
+    padding-top: 42px;
     cursor: pointer;
     }
 
@@ -50,14 +67,15 @@
 }
     
 .fas {
-    position: relative;
+    /*position: absolute;*/
     display: flex;
     color: violet;
     justify-content: space-between;
+    justify-content: center;
     align-items: center;
     font-size: 21px;
     padding-right: 2rem;
-    padding-top: 30px;
+    padding-top: 32px;
     cursor: pointer;
     }
 
@@ -70,6 +88,8 @@
     left: 2rem;
     top: 3rem;
     font-size: 22px;
+    color: black;
+    cursor: pointer;
 }
 
 .fa-circle-check {
