--- a/Style/sass/pages/_accueil.scss
+++ b/Style/sass/pages/_accueil.scss
@@ -1,4 +1,42 @@
+.divloader {
+  background: #e0d9d9;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  animation: fadeOut 1s ease-out 3s forwards;
+  z-index: 1001;
+}
 
+.loader {
+  border: 8px solid #99EDD0;
+  border-top: 8px solid #3498db;
+  border-radius: 100%;
+  background: linear-gradient(#FF79DA,#9356DC);
+  width: 100px;
+  height: 100px;
+  animation: spin 4s linear infinite, fadeOut 1s forwards ease-out 3s; 
+  /*margin: 0 auto;*/
+  position: absolute;
+  top: 46%;
+  left: 46%;
+  z-index: 1002;
+}
+
+@keyframes spin {
+  0% {transform:rotate(0deg);}
+  100% {transform:rotate(360deg);}
+}
+
+@keyframes fadeOut {
+  from {
+      opacity: 1;
+      visibility: visible;
+    }
+    to {
+      opacity: 0;
+      visibility: hidden;
+    }
+}
 
 
 /*Version desktop*/
@@ -47,7 +85,7 @@
         .card {
           max-width: 634px;
         }
-        
+
         footer {
             flex-direction: row-reverse;
             justify-content: end;
