--- a/Style/sass/pages/_menu_palette.scss
+++ b/Style/sass/pages/_menu_palette.scss
@@ -81,7 +81,8 @@
     transition: transform 0.5s ease;
     background: white;
     border-radius: 0 15px 15px 0;
-    margin-left:0;
+    margin-left: 1rem;
+    overflow: hidden;
 }
 
 .footer-pal {
@@ -93,24 +94,42 @@
 /*animation tiroir selection*/
 
 .slide-left-checkbox {
+        overflow: hidden;
         background-color: #99EDD0;
-        position: absolute;
         border-radius: 0 15px 15px 0;
         top:0;
         right: 0;
-        width: 100px;
-        height: 100%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease; /* Transition de l'animation */
-  }
-  
-.card-content:hover .slide-left-checkbox {
-        transform: translateX(0); /* Animation de translation */
+        width: 0;
+        height: 100%;   
   }
 
-.card-content:hover .prix {
-    transform: translateX(-220%); /* Animation de translation */
+.card-content:hover {/*transform: translateX(100%);
+    transition: transform 0.5s ease; /* Transition de l'animation */
+    .slide-left-checkbox {
+        width: 100px;
+        overflow: hidden;
+        /*position: relative;*/
+        animation: fillFromLeft 0.5s ease-in-out ;
 }
+}
+
+  @keyframes fillFromLeft {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 100px;
+    }
+  }
+  
+/*.card-content:hover .slide-left-checkbox {
+        transform: translateX(0); /* Animation de translation 
+  }*/
+
+/*.card-content:hover .prix {
+    transform: translateX(-220%); /* Animation de translation 
+
+}*/
 
 .fa-circle {
     display: flex;
