--- a/Style/style.css
+++ b/Style/style.css
@@ -279,7 +279,8 @@ button:hover {
   width: 100%;
   height: 100%;
   gap: 5px;
-  color: black; }
+  color: black;
+  overflow: hidden; }
 
 .card-title {
   display: block;
@@ -288,11 +289,9 @@ button:hover {
   margin-bottom: 0;
   text-overflow: ellipsis;
   font-size: 18px;
-  min-width: 200px;
   overflow: hidden; }
 
 .card-subtitle {
-  min-width: 200px;
   display: block;
   white-space: nowrap;
   margin: 0px;
@@ -316,28 +315,32 @@ button:hover {
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  width: 100%; }
 
 .tiroir {
   display: flex;
   flex-direction: column;
   width: 0;
   height: 100%;
-  animation: fillFromRight 3s ease-in-out forwards; }
+  animation: fillFromRight 3s ease-in-out forwards;
+  /* Transition de l'animation */ }
 
 .tiroir2 {
   display: flex;
   flex-direction: column;
   width: 0;
   height: 100%;
-  animation: fillFromRight 3s ease-in-out 0.5s forwards; }
+  animation: fillFromRight 3s ease-in-out 0.5s forwards;
+  /* Transition de l'animation */ }
 
 .tiroir3 {
   display: flex;
   flex-direction: column;
   width: 0;
   height: 100%;
-  animation: fillFromRight 3s ease-in-out 1s forwards; }
+  animation: fillFromRight 3s ease-in-out 1s forwards;
+  /* Transition de l'animation */ }
 
 /* Animation de l'ouverture des tiroirs */
 @keyframes fillFromRight {
@@ -591,7 +594,8 @@ body {
   transition: transform 0.5s ease;
   background: white;
   border-radius: 0 15px 15px 0;
-  margin-left: 0; }
+  margin-left: 1rem;
+  overflow: hidden; }
 
 .footer-pal {
   position: relative;
@@ -600,25 +604,35 @@ body {
 
 /*animation tiroir selection*/
 .slide-left-checkbox {
+  overflow: hidden;
   background-color: #99EDD0;
-  position: absolute;
   border-radius: 0 15px 15px 0;
   top: 0;
   right: 0;
-  width: 100px;
-  height: 100%;
-  transform: translateX(100%);
-  transition: transform 0.5s ease;
-  /* Transition de l'animation */ }
+  width: 0;
+  height: 100%; }
 
-.card-content:hover .slide-left-checkbox {
-  transform: translateX(0);
-  /* Animation de translation */ }
+.card-content:hover {
+                 /*transform: translateX(100%);
+transition: transform 0.5s ease; /* Transition de l'animation */ }
+  .card-content:hover .slide-left-checkbox {
+    width: 100px;
+    overflow: hidden;
+    /*position: relative;*/
+    animation: fillFromLeft 0.5s ease-in-out; }
 
-.card-content:hover .prix {
-  transform: translateX(-220%);
-  /* Animation de translation */ }
+@keyframes fillFromLeft {
+  0% {
+    width: 0; }
+  100% {
+    width: 100px; } }
+/*.card-content:hover .slide-left-checkbox {
+        transform: translateX(0); /* Animation de translation 
+  }*/
+/*.card-content:hover .prix {
+    transform: translateX(-220%); /* Animation de translation 
 
+}*/
 .fa-circle {
   display: flex;
   font-size: 16px;
