--- a/Style/sass/components/_button.scss
+++ b/Style/sass/components/_button.scss
@@ -1,4 +1,7 @@
-button {
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background:linear-gradient(#FF79DA,#9356DC);
     color: white;
     border-radius: 500px;
@@ -11,7 +14,7 @@ button {
     transition: background-color 1s ease;
 }
 
-button:hover {
+.button:hover {
         transform: scale(1.02);
         opacity: 0.8;
 }
@@ -24,8 +27,7 @@ button:hover {
     box-shadow: 0px 4px 15px 5px rgb(212, 209, 209);
     width: 100%;
     height: 72px;
-    padding-left: 40px;
-    gap: 2rem;
+    padding-left: 10%;
     margin-left: 13px;
     cursor: pointer;
 }
@@ -33,12 +35,17 @@ button:hover {
 .grey-btn:hover {
     transform: scale(1.02);
     opacity: 0.8;
+    .fa-solid {
+        color: #9356DC;
+    }
 }
 
 .text {
     @include text-center;
     font-weight: 600;
     font-size: 16px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .commander {
