--- a/Style/style.css
+++ b/Style/style.css
@@ -78,9 +78,6 @@ i.fa-sharp {
   display: flex;
   align-items: center; }
 
-.fa-store {
-  color: #9356DC; }
-
 .custom-checkbox input[type="checkbox"],
 .custom-checkbox .checked {
   display: none;
@@ -90,17 +87,20 @@ i.fa-sharp {
 .custom-checkbox input[type="checkbox"]:checked ~ .checked {
   display: inline-block;
   width: 20px;
-  height: 20px; }
+  height: 20px;
+  transition: height 2s ease-in-out; }
 
 .custom-checkbox input[type="checkbox"]:checked ~ .unchecked {
   display: none;
   width: 20px;
-  height: 20px; }
+  height: 20px;
+  transition: height 2s ease-in-out; }
 
 .custom-checkbox {
   width: 20px;
   height: 20px;
-  padding-right: 3rem; }
+  padding-right: 3rem;
+  transition: height 2s ease-in-out; }
 
 @keyframes fillFromRight {
   0% {
@@ -108,11 +108,13 @@ i.fa-sharp {
   100% {
     width: 100%; } }
 .icon-heart {
-  width: 100%; }
+  width: 100%;
+  transition: height 2s ease-in-out; }
 
 .coeur {
   width: 20px;
-  height: 20px; }
+  height: 20px;
+  transition: height 2s ease-in-out; }
 
 .far {
   /*position: relative;*/
@@ -123,12 +125,14 @@ i.fa-sharp {
   align-items: center;
   font-size: 20px;
   padding-top: 42px;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: height 2ss ease-in-out; }
 
 .coeur2 {
   width: 20px;
   height: 20px;
-  margin-right: 2rem; }
+  margin-right: 2rem;
+  transition: height 2s ease-in-out; }
 
 .fas {
   /*position: absolute;*/
@@ -140,7 +144,8 @@ i.fa-sharp {
   font-size: 21px;
   padding-right: 2rem;
   padding-top: 32px;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: height 2s ease-in-out; }
 
 .fa-arrow-left {
   display: flex;
@@ -184,7 +189,10 @@ i.fa-sharp {
   right: 1rem;
   top: 1rem; }
 
-button {
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: linear-gradient(#FF79DA, #9356DC);
   color: white;
   border-radius: 500px;
@@ -196,7 +204,7 @@ button {
   cursor: pointer;
   transition: background-color 1s ease; }
 
-button:hover {
+.button:hover {
   transform: scale(1.02);
   opacity: 0.8; }
 
@@ -208,20 +216,23 @@ button:hover {
   box-shadow: 0px 4px 15px 5px #d4d1d1;
   width: 100%;
   height: 72px;
-  padding-left: 40px;
-  gap: 2rem;
+  padding-left: 10%;
   margin-left: 13px;
   cursor: pointer; }
 
 .grey-btn:hover {
   transform: scale(1.02);
   opacity: 0.8; }
+  .grey-btn:hover .fa-solid {
+    color: #9356DC; }
 
 .text {
   display: flex;
   align-items: center;
   font-weight: 600;
-  font-size: 16px; }
+  font-size: 16px;
+  margin-left: auto;
+  margin-right: auto; }
 
 .commander {
   position: relative;
