--- a/Style/sass/base/_reset.scss
+++ b/Style/sass/base/_reset.scss
@@ -78,6 +78,7 @@ a {
         background-color: white;
         padding-top: 1rem;
         padding-bottom: 3rem;
+        width: 100%;
     }
 
     .fonct-title {
