--- a/Style/sass/components/_button.scss
+++ b/Style/sass/components/_button.scss
@@ -44,7 +44,7 @@
     @include text-center;
     font-weight: 600;
     font-size: 16px;
-    margin-left: auto;
+    margin-left: 15%;
     margin-right: auto;
 }
 
