--- a/Style/sass/pages/_accueil.scss
+++ b/Style/sass/pages/_accueil.scss
@@ -38,6 +38,21 @@
     }
 }
 
+/*Version tablette*/
+@media (min-width:  550px)
+                {
+      .debackground {
+        max-width: 550px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .restaurants {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 550px;
+      }
+                }
 
 /*Version desktop*/
 @media (min-width: 1023.98px)
