--- a/Style/sass/style.css
+++ b/Style/sass/style.css
@@ -2,16 +2,20 @@
 /*mobile first*/
 a {
   text-decoration: none;
-  color: white; }
+  color: white;
+}
 
 .header__title {
-  font-family: "Shrikhand"; }
+  font-family: "Shrikhand";
+}
 
 h1 {
-  font-weight: 400; }
+  font-weight: 400;
+}
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .search {
   box-shadow: inset 0 10px 10px -10px grey;
@@ -24,7 +28,8 @@ h1 {
   padding-left: 30px;
   background-color: #EAEAEA;
   width: 100%;
-  height: 50px; }
+  height: 50px;
+}
 
 i.fa-sharp {
   display: flex;
@@ -32,13 +37,15 @@ i.fa-sharp {
   width: 12px;
   height: 16px;
   padding-left: 60px;
-  color: #353535; }
+  color: #353535;
+}
 
 .search__input {
   border: 0px;
   background-color: #EAEAEA;
   font-size: medium;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .presentation {
   display: flex;
@@ -47,7 +54,8 @@ i.fa-sharp {
   justify-content: center;
   text-align: center;
   padding-bottom: 3rem;
-  background-color: #F7F7F7; }
+  background-color: #F7F7F7;
+}
 
 .reserver {
   display: flex;
@@ -55,11 +63,13 @@ i.fa-sharp {
   font-size: 24px;
   padding-top: 2rem;
   width: 70%;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .decouvrez {
   width: 70%;
-  padding-bottom: 1rem; }
+  padding-bottom: 1rem;
+}
 
 .fonctionnement {
   display: flex;
@@ -69,50 +79,64 @@ i.fa-sharp {
   background-color: white;
   padding-top: 1rem;
   padding-bottom: 3rem;
-  width: 100%; }
+}
 
 .fonct-title {
   padding-left: 1rem;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
 .fa-solid {
   display: flex;
-  align-items: center; }
+  align-items: center;
+}
 
-.custom-checkbox input[type="checkbox"],
+.custom-checkbox input[type=checkbox],
 .custom-checkbox .checked {
   display: none;
   width: 20px;
-  height: 20px; }
+  height: 20px;
+}
 
-.custom-checkbox input[type="checkbox"]:checked ~ .checked {
+.custom-checkbox input[type=checkbox]:checked ~ .checked {
   display: inline-block;
   width: 20px;
-  height: 20px; }
+  height: 20px;
+  transition: height 2s ease-in-out;
+}
 
-.custom-checkbox input[type="checkbox"]:checked ~ .unchecked {
+.custom-checkbox input[type=checkbox]:checked ~ .unchecked {
   display: none;
   width: 20px;
-  height: 20px; }
+  height: 20px;
+  transition: height 2s ease-in-out;
+}
 
 .custom-checkbox {
   width: 20px;
   height: 20px;
-  padding-right: 3rem; }
+  padding-right: 3rem;
+  transition: height 2s ease-in-out;
+}
 
 @keyframes fillFromRight {
   0% {
-    width: 0; }
+    width: 0;
+  }
   100% {
-    width: 100%; } }
+    width: 100%;
+  }
+}
 .icon-heart {
   width: 100%;
-  transition: height 2s ease-in-out; }
+  transition: height 2s ease-in-out;
+}
 
 .coeur {
   width: 20px;
   height: 20px;
-  transition: height 2s ease-in-out; }
+  transition: height 2s ease-in-out;
+}
 
 .far {
   /*position: relative;*/
@@ -124,13 +148,15 @@ i.fa-sharp {
   font-size: 20px;
   padding-top: 42px;
   cursor: pointer;
-  transition: height 2ss ease-in-out; }
+  transition: height 2ss ease-in-out;
+}
 
 .coeur2 {
   width: 20px;
   height: 20px;
   margin-right: 2rem;
-  transition: height 2s ease-in-out; }
+  transition: height 2s ease-in-out;
+}
 
 .fas {
   /*position: absolute;*/
@@ -143,7 +169,8 @@ i.fa-sharp {
   padding-right: 2rem;
   padding-top: 32px;
   cursor: pointer;
-  transition: height 2s ease-in-out; }
+  transition: height 2s ease-in-out;
+}
 
 .fa-arrow-left {
   display: flex;
@@ -155,7 +182,8 @@ i.fa-sharp {
   top: 3rem;
   font-size: 22px;
   color: black;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .fa-circle-check {
   display: flex;
@@ -163,7 +191,8 @@ i.fa-sharp {
   align-items: center;
   font-size: 30px;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+}
 
 .number {
   display: flex;
@@ -174,7 +203,8 @@ i.fa-sharp {
   border-radius: 25px;
   background-color: #9356DC;
   color: white;
-  position: absolute; }
+  position: absolute;
+}
 
 .nouveau {
   position: absolute;
@@ -185,7 +215,8 @@ i.fa-sharp {
   display: grid;
   place-items: center;
   right: 1rem;
-  top: 1rem; }
+  top: 1rem;
+}
 
 .button {
   display: flex;
@@ -198,60 +229,69 @@ i.fa-sharp {
   font-size: 16px;
   height: 50px;
   border: none;
-  box-shadow: 0px 5px 5px #c2c0c0;
+  box-shadow: 0px 5px 5px rgb(194, 192, 192);
   cursor: pointer;
-  transition: background-color 1s ease; }
+  transition: background-color 1s ease;
+}
 
 .button:hover {
   transform: scale(1.02);
-  opacity: 0.8; }
+  opacity: 0.8;
+}
 
 .grey-btn {
   display: flex;
   flex-direction: row;
   border-radius: 20px;
   background-color: #f1f1f1;
-  box-shadow: 0px 4px 15px 5px #d4d1d1;
+  box-shadow: 0px 4px 15px 5px rgb(212, 209, 209);
   width: 100%;
   height: 72px;
   padding-left: 10%;
   margin-left: 13px;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .grey-btn:hover {
   transform: scale(1.02);
-  opacity: 0.8; }
-  .grey-btn:hover .fa-solid {
-    color: #9356DC; }
+  opacity: 0.8;
+}
+.grey-btn:hover .fa-solid {
+  color: #9356DC;
+}
 
 .text {
   display: flex;
   align-items: center;
   font-weight: 600;
   font-size: 16px;
-  margin-left: 15%;
-  margin-right: auto; }
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .commander {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 2rem; }
+  padding-bottom: 2rem;
+}
 
 .ligne1desktop {
   display: flex;
   flex-direction: column;
   height: 100%;
   width: 100%;
-  gap: 1rem; }
+  gap: 1rem;
+}
 
 .ligne2desktop {
   display: flex;
   flex-direction: column;
   height: 100%;
   width: 100%;
-  gap: 1rem; }
+  gap: 1rem;
+}
 
 .card {
   display: flex;
@@ -261,15 +301,18 @@ i.fa-sharp {
   position: relative;
   justify-content: space-between;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+}
 
 .card-img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   overflow: hidden;
   width: 100%;
   height: 200px;
   position: relative;
-  border-radius: 15px 15px 0px 0px; }
+  border-radius: 15px 15px 0px 0px;
+}
 
 .card-content {
   display: flex;
@@ -280,7 +323,8 @@ i.fa-sharp {
   padding-left: 1rem;
   overflow: hidden;
   position: relative;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .card-txt {
   display: flex;
@@ -289,7 +333,8 @@ i.fa-sharp {
   height: 100%;
   gap: 5px;
   color: black;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .card-title {
   display: block;
@@ -298,7 +343,8 @@ i.fa-sharp {
   margin-bottom: 0;
   text-overflow: ellipsis;
   font-size: 18px;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .card-subtitle {
   display: block;
@@ -307,17 +353,20 @@ i.fa-sharp {
   padding-bottom: 1rem;
   text-overflow: ellipsis;
   font-size: 15px;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .box-shadow {
-  box-shadow: 0px 4px 15px 5px #d4d1d1; }
+  box-shadow: 0px 4px 15px 5px rgb(212, 209, 209);
+}
 
 .restaurants {
   display: flex;
   flex-direction: column;
   padding: 1rem;
   padding-bottom: 2rem;
-  width: 100%; }
+  width: 100%;
+}
 
 .restaurants-cards {
   display: flex;
@@ -325,51 +374,57 @@ i.fa-sharp {
   justify-content: center;
   gap: 1rem;
   flex-wrap: wrap;
-  width: 100%; }
+  width: 100%;
+}
 
 .tiroir {
   display: flex;
   flex-direction: column;
   width: 0;
   height: 100%;
-  animation: fillFromRight 3s ease-in-out forwards;
-  /* Transition de l'animation */ }
+  animation: fillFromRight 3s ease-in-out forwards; /* Transition de l'animation */
+}
 
 .tiroir2 {
   display: flex;
   flex-direction: column;
   width: 0;
   height: 100%;
-  animation: fillFromRight 3s ease-in-out 0.5s forwards;
-  /* Transition de l'animation */ }
+  animation: fillFromRight 3s ease-in-out 0.5s forwards; /* Transition de l'animation */
+}
 
 .tiroir3 {
   display: flex;
   flex-direction: column;
   width: 0;
   height: 100%;
-  animation: fillFromRight 3s ease-in-out 1s forwards;
-  /* Transition de l'animation */ }
+  animation: fillFromRight 3s ease-in-out 1s forwards; /* Transition de l'animation */
+}
 
 /* Animation de l'ouverture des tiroirs */
 @keyframes fillFromRight {
   0% {
-    width: 0; }
+    width: 0;
+  }
   100% {
-    width: 100%; } }
+    width: 100%;
+  }
+}
 /* Ajouter des délais d'animation pour chaque tiroir */
 body {
   margin: 0 auto;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background: #f6f6f6;
   box-sizing: border-box;
-  max-width: 1440px; }
+  max-width: 1440px;
+}
 
 .debackground {
   display: flex;
   flex-direction: column;
   align-self: center;
-  width: 100%; }
+  width: 100%;
+}
 
 footer {
   margin: 0 auto;
@@ -377,37 +432,45 @@ footer {
   flex-direction: column;
   padding: 1.5rem;
   color: white;
-  background-color: #353535; }
-  footer li {
-    list-style: none; }
+  background-color: #353535;
+}
+footer li {
+  list-style: none;
+}
 
 .foot-title {
   display: flex;
   font-family: "Shrikhand";
   font-weight: 400;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
 ul {
   display: flex;
   flex-direction: column;
   padding: 0;
-  gap: 0.5rem; }
+  gap: 0.5rem;
+}
 
 li {
   display: flex;
   flex-direction: row;
-  gap: 1rem; }
+  gap: 1rem;
+}
 
 .utensils {
   display: flex;
-  gap: 0.7rem; }
+  gap: 0.7rem;
+}
 
 .handshake {
   display: flex;
-  gap: 0.5rem; }
+  gap: 0.5rem;
+}
 
 .fa-handshake-angle {
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 header {
   margin: 0 auto;
@@ -419,19 +482,22 @@ header {
   height: 63px;
   align-items: center;
   justify-content: center;
-  background-color: white; }
+  background-color: white;
+}
 
 .filtres {
   display: flex;
   flex-direction: column;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .choix {
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 100%;
-  padding: 20px; }
+  padding: 20px;
+}
 
 .divloader {
   background: #e0d9d9;
@@ -439,7 +505,8 @@ header {
   height: 100%;
   position: absolute;
   animation: fadeOut 1s ease-out 3s forwards;
-  z-index: 1001; }
+  z-index: 1001;
+}
 
 .loader {
   border: 8px solid #99EDD0;
@@ -453,140 +520,151 @@ header {
   position: absolute;
   top: 46%;
   left: 46%;
-  z-index: 1002; }
+  z-index: 1002;
+}
 
 @keyframes spin {
   0% {
-    transform: rotate(0deg); }
+    transform: rotate(0deg);
+  }
   100% {
-    transform: rotate(360deg); } }
+    transform: rotate(360deg);
+  }
+}
 @keyframes fadeOut {
   from {
     opacity: 1;
-    visibility: visible; }
+    visibility: visible;
+  }
   to {
     opacity: 0;
-    visibility: hidden; } }
-/*Version tablette*/
-@media (min-width: 550px) {
-  .debackground {
-    max-width: 550px;
-    margin-left: auto;
-    margin-right: auto; }
-
-  .restaurants {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 550px; } }
+    visibility: hidden;
+  }
+}
 /*Version desktop*/
 @media (min-width: 1023.98px) {
   .fonctionnement {
-    margin: 0 auto; }
-
+    margin: 0 auto;
+  }
   .debackground {
-    max-width: 1250px; }
-
+    max-width: 1250px;
+  }
   .restaurants {
     max-width: 1250px;
     margin: 0 auto;
-    padding-bottom: 2rem; }
-
+    padding-bottom: 2rem;
+  }
   .filtres {
     display: flex;
-    flex-direction: row; }
-
+    flex-direction: row;
+  }
   .restaurants-cards {
     display: flex;
     flex-direction: row;
-    gap: 3rem; }
-
+    gap: 3rem;
+  }
   .ligne1desktop {
     flex-direction: row;
     width: 100%;
     height: 100%;
-    gap: 5rem; }
-
+    gap: 5rem;
+  }
   .ligne2desktop {
     flex-direction: row;
     width: 100%;
     height: 100%;
-    gap: 5rem; }
-
+    gap: 5rem;
+  }
   .card {
-    max-width: 634px; }
-
+    max-width: 634px;
+  }
   footer {
     flex-direction: row-reverse;
     justify-content: end;
     padding-bottom: 10px;
-    padding-right: 3rem; }
-
+    padding-right: 3rem;
+  }
   .foot-title {
     display: flex;
     align-items: center;
-    font-size: 20px; }
-
+    font-size: 20px;
+  }
   ul {
     display: flex;
     flex-direction: row;
     margin-right: 4rem;
     margin-top: 40px;
     gap: 2rem;
-    padding-bottom: 0; } }
+    padding-bottom: 0;
+  }
+}
 body {
   margin: 0 auto;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background: #f6f6f6;
   box-sizing: border-box;
-  max-width: 1440px; }
+  max-width: 1440px;
+}
 
 .debackground {
   display: flex;
   flex-direction: column;
   align-self: center;
-  width: 100%; }
+  width: 100%;
+}
 
 .photoentête {
   z-index: 1;
   height: 383px;
-  margin-bottom: -3rem; }
-  .photoentête img {
-    object-fit: cover;
-    height: 100%;
-    width: 100%; }
+  margin-bottom: -3rem;
+}
+.photoentête img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
 
 .backwhite {
-  background: white; }
+  background: white;
+}
 
 .centre {
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .souligne {
   display: flex;
   border-bottom: 3px solid #99EDD0;
   width: 40px;
   padding-top: 0;
-  margin-top: 0; }
+  margin-top: 0;
+}
 
 .margin-bottom {
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+}
 
 .margin-top {
-  margin-top: 3rem; }
+  margin-top: 3rem;
+}
 
 .font-weight400 {
   font-weight: 400;
-  font-size: 28px; }
+  font-size: 28px;
+}
 
 .font-weight100 {
-  font-weight: 100; }
+  font-weight: 100;
+}
 
 .row {
   display: flex;
   flex-direction: row;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .main-pal {
   background-color: #F6F6F6;
@@ -596,14 +674,17 @@ body {
   width: 100%;
   max-width: 1054px;
   height: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 /* ajustement coeur pour la page */
 .ajust {
-  right: 48px; }
+  right: 48px;
+}
 
 .ajust2 {
-  padding-right: 0px; }
+  padding-right: 0px;
+}
 
 .prix {
   display: flex;
@@ -615,12 +696,14 @@ body {
   background: white;
   border-radius: 0 15px 15px 0;
   margin-left: 1rem;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .footer-pal {
   position: relative;
   bottom: 0;
-  width: 100%; }
+  width: 100%;
+}
 
 /*animation tiroir selection*/
 .slide-left-checkbox {
@@ -630,29 +713,40 @@ body {
   top: 0;
   right: 0;
   width: 0;
-  height: 100%; }
+  height: 100%;
+}
 
+.card-content:hover { /*transform: translateX(100%);
+transition: transform 0.5s ease; /* Transition de l'animation */ }
 .card-content:hover .slide-left-checkbox {
   width: 100px;
   overflow: hidden;
-  animation: fillFromLeft 0.5s ease-in-out; }
-
-.card-content:not(:hover) .slide-left-checkbox {
-  transition: width 0.5s ease-in-out, 0.5s;
-  width: 0;
-  right: 100px; }
+  /*position: relative;*/
+  animation: fillFromLeft 0.5s ease-in-out;
+}
 
 @keyframes fillFromLeft {
   0% {
-    width: 0; }
+    width: 0;
+  }
   100% {
-    width: 100px; } }
+    width: 100px;
+  }
+}
+/*.card-content:hover .slide-left-checkbox {
+        transform: translateX(0); /* Animation de translation 
+  }*/
+/*.card-content:hover .prix {
+    transform: translateX(-220%); /* Animation de translation 
+
+}*/
 .fa-circle {
   display: flex;
   font-size: 16px;
   height: 100%;
   border-radius: 0 15px 15px 0;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 /*Version desktop*/
 @media (min-width: 1023.98px) {
@@ -660,19 +754,18 @@ body {
     justify-content: center;
     max-width: 634px;
     margin: 0 auto;
-    gap: 3rem; }
-
+    gap: 3rem;
+  }
   .restaurant {
-    justify-content: center; }
-
+    justify-content: center;
+  }
   .font-weight100 {
-    padding-left: 12rem; }
-
+    padding-left: 12rem;
+  }
   .souligne {
-    margin-left: 12rem; }
-
+    margin-left: 12rem;
+  }
   .gap {
-    gap: 1rem;
-    /*ajustement menus*/ } }
-
-/*# sourceMappingURL=style.css.map */
+    gap: 1rem; /*ajustement menus*/
+  }
+}/*# sourceMappingURL=style.css.map */
